--- a/src/styles.css
+++ b/src/styles.css
@@ -38,3 +38,11 @@
     outline: none;
     padding: 10px;
 }
+
+.fab{
+    border-radius: 100px;
+    bottom: 25px;
+    font-size: 30px;
+    position: fixed;
+    right: 25px;
+}
