--- a/src/styles.css
+++ b/src/styles.css
@@ -45,4 +45,14 @@
     font-size: 30px;
     position: fixed;
     right: 25px;
+    padding: 25px;
+}
+.fab-danger{
+    border-radius: 100%;
+    bottom: 25px;
+    font-size: 22px;
+    position: fixed;
+    left: 25px;
+    width: 70px;
+    height: 70px;
 }
